{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 38,
  "lineage": "99890c86-88d5-b992-ceb7-13af5b0915f4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07219fd60e856e574",
            "arn": "arn:aws:ec2:eu-north-1:258231021934:elastic-ip/eipalloc-07219fd60e856e574",
            "association_id": "eipassoc-056ddbc06e47216e6",
            "domain": "vpc",
            "id": "eipalloc-07219fd60e856e574",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-071b9b4b4198624ae",
            "private_dns": "ip-10-0-0-144.eu-north-1.compute.internal",
            "private_ip": "10.0.0.144",
            "public_dns": "ec2-13-63-169-200.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.63.169.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "edutrack-nat-eip"
            },
            "tags_all": {
              "Name": "edutrack-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080254318c2d8932f",
            "arn": "arn:aws:ec2:eu-north-1:258231021934:instance/i-05f7acc3219510b1c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f7acc3219510b1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "my-aws-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04efb36f4661bfa13",
            "private_dns": "ip-172-31-12-167.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.12.167",
            "public_dns": "ec2-13-63-130-94.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.63.130.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08274e5ee95640fa9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8b3cb2f6b618b88",
            "tags": {
              "Name": "django server"
            },
            "tags_all": {
              "Name": "django server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e177899d493843e0"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:258231021934:internet-gateway/igw-007555cf707198218",
            "id": "igw-007555cf707198218",
            "owner_id": "258231021934",
            "tags": {
              "Environment": "production",
              "Name": "edutrack-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edutrack-igw"
            },
            "vpc_id": "vpc-0eb6873650a84e750"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07219fd60e856e574",
            "association_id": "eipassoc-056ddbc06e47216e6",
            "connectivity_type": "public",
            "id": "nat-04fb349569b309294",
            "network_interface_id": "eni-071b9b4b4198624ae",
            "private_ip": "10.0.0.144",
            "public_ip": "13.63.169.200",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0be8c6772f86c4574",
            "tags": {
              "Environment": "production",
              "Name": "edutrack-nat"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edutrack-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:258231021934:route-table/rtb-0a0c8255f389f0576",
            "id": "rtb-0a0c8255f389f0576",
            "owner_id": "258231021934",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04fb349569b309294",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "edutrack-private-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edutrack-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb6873650a84e750"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:258231021934:route-table/rtb-0683bbc083564a22f",
            "id": "rtb-0683bbc083564a22f",
            "owner_id": "258231021934",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-007555cf707198218",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "edutrack-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edutrack-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb6873650a84e750"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0085d6573be90d0",
            "route_table_id": "rtb-0a0c8255f389f0576",
            "subnet_id": "subnet-01edeb95750ad5684"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f1ee0a2b85ba190",
            "route_table_id": "rtb-0a0c8255f389f0576",
            "subnet_id": "subnet-058a2578bba332f4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010b5175d8b7fc365",
            "route_table_id": "rtb-0683bbc083564a22f",
            "subnet_id": "subnet-0be8c6772f86c4574"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036738fb44cfe04f5",
            "route_table_id": "rtb-0683bbc083564a22f",
            "subnet_id": "subnet-06b79be3c95fa9bbe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:258231021934:security-group/sg-05c203220aa181b31",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c203220aa181b31",
            "ingress": [],
            "name": "edutrack-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "258231021934",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "edutrack-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edutrack-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb6873650a84e750"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:258231021934:security-group/sg-015a0b08906f4743c",
            "description": "EKS nodes security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015a0b08906f4743c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-05c203220aa181b31"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "edutrack-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "258231021934",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "edutrack-eks-nodes-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edutrack-eks-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb6873650a84e750"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:258231021934:security-group/sg-03d3920eb302bf400",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d3920eb302bf400",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-015a0b08906f4743c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "edutrack-rds-sg",
            "name_prefix": "",
            "owner_id": "258231021934",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "edutrack-rds-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edutrack-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb6873650a84e750"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:258231021934:subnet/subnet-01edeb95750ad5684",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01edeb95750ad5684",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258231021934",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "edutrack-private-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edutrack-private-subnet-1"
            },
            "vpc_id": "vpc-0eb6873650a84e750"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:258231021934:subnet/subnet-058a2578bba332f4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058a2578bba332f4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258231021934",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "edutrack-private-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edutrack-private-subnet-2"
            },
            "vpc_id": "vpc-0eb6873650a84e750"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:258231021934:subnet/subnet-0be8c6772f86c4574",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be8c6772f86c4574",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "258231021934",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "edutrack-public-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edutrack-public-subnet-1"
            },
            "vpc_id": "vpc-0eb6873650a84e750"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:258231021934:subnet/subnet-06b79be3c95fa9bbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b79be3c95fa9bbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "258231021934",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "edutrack-public-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edutrack-public-subnet-2"
            },
            "vpc_id": "vpc-0eb6873650a84e750"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:258231021934:vpc/vpc-0eb6873650a84e750",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d5d0e1b2536823d7",
            "default_route_table_id": "rtb-0d408bcde2bb53d11",
            "default_security_group_id": "sg-0f39f6b7be29efe3e",
            "dhcp_options_id": "dopt-0063e7790e7fb219a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb6873650a84e750",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d408bcde2bb53d11",
            "owner_id": "258231021934",
            "tags": {
              "Environment": "production",
              "Name": "edutrack-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "edutrack-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}